2011-09-10  Roland Clobus <rclobus@rclobus.nl>
	* server/gtk/main.c: Fit the server in 1024x768.

2011-08-18  Micah Bunting <Amnykon@gmail.com>
	* client/gtk/trade.c: Follow GNOME HIG (no frames)
	* editor/gtk/editor.c, common/gtk/common_gtk.c,
	common/gtk/common_gtk.h: Move build_frames to common location.
	* server/gtk/main.c: Follow GNOME HIG (no frames)
	* client/gtk/identity.c: Code simplification.

2011-08-10  Micah Bunting <Amnykon@gmail.com>
	* server/gtk/main.c: Code cleanup.

2011-08-05  Micah Bunting <Amnykon@gmail.com>
	* editor/gtk/editor.c: Follow GNOME HIG (no frames)

2011-08-03  Roland Clobus <rclobus@rclobus.nl>
	* client/ai/greedy.c: Fix compiler warnings about mixed enums.

2011-07-25  Micah Bunting <Amnykon@gmail.com>
	* editor/gtk/editor.c, client/gtk/gui.c: Add fullscreen.

2011-07-25  Roland Clobus <rclobus@rclobus.nl>
	* Makefile.am, client/gtk/frontend.h, client/gtk/resource-view.gob,
	client/gtk/resource.c, client/gtk/legend.c, client/gtk/gui.c,
	client/gtk/Makefile.am, client/gtk/gui.h: Move all display functions of
	resources to resource-view.gob. Also fix the .gob make rules. Also use
	cairo for the display of the resources, which allows for fractional
	coordinates and smooth resizing.

2011-07-20  Roland Clobus <rclobus@rclobus.nl>
	* common/notifying-string.gob: make reindent

2011-07-14  Roland Clobus <rclobus@rclobus.nl>
	* common/gtk/theme.c, common/gtk/gtkcompat.h: Restore compatibility
	with Debian Stable.

2011-07-06  Roland Clobus <rclobus@rclobus.nl>
	* common/gtk/player-icon.c, common/gtk/polygon.c, common/gtk/polygon.h,
	client/gtk/player.c, client/gtk/quote-view.c: Replace GdkGC.

2011-07-01  Roland Clobus <rclobus@rclobus.nl>
	* common/gtk/theme.c: Replace GDK deprecated functions.
	* client/gtk/identity.c: Replace GDK deprecated functions.

2011-06-26  Roland Clobus <rclobus@rclobus.nl>
	* MinGW/Makefile.am, pioneers.nsi.in: Fix the Windows installer.
	(Taken from the 0.12.4 branch)
