@@ -1,3 +1,7 @@
+2011-09-18  Roland Clobus <rclobus@rclobus.nl.
+	* server/robber.c: Fix a crash when moving the pirate before a robber
+	was visible.
+
 2011-09-10  Roland Clobus <rclobus@rclobus.nl>
 	* server/gtk/main.c: Fit the server in 1024x768.
 
